--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,27 +1,20 @@
 .App {
   text-align: center;
+  background-color: gray;
+}
+.navigation {
+  background-color: gray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.linkStyles {
+  border-top: 10px;
+  padding-bottom: 10px;
+  padding: 10px;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  background-color: gray;
 }
 
 .App-link {
